@@ -6,8 +6,10 @@ apt (0.8.15.2) unstable; urgency=low
       told us the opposite before (e.g. in fakeroot 1.16) (Closes: #630591)
   * doc/sources.list.5.xml:
     - document available [options] for sources.list entries (Closes: 632441)
+  * doc/apt.conf.5.xml:
+    - document APT::Architectures list (Closes: #612102)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 05 Jul 2011 15:12:21 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Tue, 05 Jul 2011 15:31:55 +0200
 
 apt (0.8.15.1) unstable; urgency=low
 
